// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with active state 1`] = `
"<div data-v-72fb6e0d="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-72fb6e0d="" class="unnnic-checkbox-wrapper"><label data-v-18939422=""><input data-v-18939422="" class="unnnic-checkbox" type="checkbox" checked="">
      <p data-v-18939422="" class="unnnic-checkbox__label" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with both active and disabled states 1`] = `
"<div data-v-72fb6e0d="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-72fb6e0d="" class="unnnic-checkbox-wrapper"><label data-v-18939422=""><input data-v-18939422="" class="unnnic-checkbox" type="checkbox" disabled="" checked="">
      <p data-v-18939422="" class="unnnic-checkbox__label unnnic-checkbox__label--disabled" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with default props 1`] = `
"<div data-v-72fb6e0d="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-72fb6e0d="" class="unnnic-checkbox-wrapper"><label data-v-18939422=""><input data-v-18939422="" class="unnnic-checkbox" type="checkbox">
      <p data-v-18939422="" class="unnnic-checkbox__label" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with disabled state 1`] = `
"<div data-v-72fb6e0d="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-72fb6e0d="" class="unnnic-checkbox-wrapper"><label data-v-18939422=""><input data-v-18939422="" class="unnnic-checkbox" type="checkbox" disabled="">
      <p data-v-18939422="" class="unnnic-checkbox__label unnnic-checkbox__label--disabled" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;

exports[`MultiSelectOption.vue > snapshot testing > matches snapshot with focused state 1`] = `
"<div data-v-72fb6e0d="" class="unnnic-multi-select-option">
  <section data-v-18939422="" data-v-72fb6e0d="" class="unnnic-checkbox-wrapper"><label data-v-18939422=""><input data-v-18939422="" class="unnnic-checkbox" type="checkbox">
      <p data-v-18939422="" class="unnnic-checkbox__label" data-testid="checkbox-text-right">Test Option</p>
    </label>
    <!--v-if-->
  </section>
</div>"
`;
